Delete current user
